tests/valid/definite/SetLength_Valid_1.whiley
void System::main([string] args):
     xs = {1,2,3}
     print str(|xs|)
