tests/invalid/simple/SetConversion_CompileFail_1.whiley
void f({real} ls):
    print str(ls)

void System::main([string] args):
    f({1,2,3,{}})
